MB-15700/MB-16169: Disable TCMalloc.aggressive_decommit

GPerftools v2.4[1] has changed its default value for
aggressive_decommit from false to true. While this can reduce RSS
footprint it has been shown to significantly effect the performance of
Couchbase. Therefore explictly disable it by default.

[1]: https://github.com/gperftools/gperftools/releases

Change-Id: I41eaf3fb413a8823c17c0b486e7ac79c0e75624e
Reviewed-on: http://review.couchbase.org/55392
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>