daemon/alloc_hooks.c
@@ -367,6 +367,14 @@ static void init_no_hooks(void) {
 void init_alloc_hooks() {
 #ifdef HAVE_TCMALLOC
     init_tcmalloc_hooks();
+    // TCMalloc's aggressive decommit setting has a significant performance
+    // impact on us; and from gperftools v2.4 it is enabled by default.
+    // Turn it off.
+    if (!MallocExtension_SetNumericProperty
+        ("tcmalloc.aggressive_memory_decommit", 0)) {
+        get_stderr_logger()->log(EXTENSION_LOG_WARNING, NULL,
+                                 "Failed to disable tcmalloc.aggressive_memory_decommit");
+    }
 #elif defined(HAVE_JEMALLOC)
     init_jemalloc_hooks();
 #  if defined(__APPLE__)
